tests/cases/smoke/invalid/rebind_outer_in_nested_function.dp
func outer(x: int) -> int {
    func inner(y: int) -> int = x + y
    return inner(5)
}
